Finalizado o projeto conexao com backend, requisições, listar, cadastrar, buscar por id.

--- a/poc-front-abertura-contas/src/app/components/deposito/deposito.component.html
+++ b/poc-front-abertura-contas/src/app/components/deposito/deposito.component.html
@@ -2,14 +2,14 @@
 <div class="container">
   <div class="form-container">
     <h2 class="form-title">Fazer Depósito</h2>
-    <form [formGroup]="cadastroForm" (ngSubmit)="submitForm()">
+    <form [formGroup]="depositoForm" (ngSubmit)="submitForm()">
       <div class="form-group">
         <label for="contaOrigem">ContaOrigem:</label>
-        <input type="text" pInputText />
+        <input type="text" pInputText formControlName="contaOrigem"/>
       </div>
       <div class="form-group">
         <label for="contaDestino">ContaDestino:</label>
-        <input type="text" pInputText />
+        <input type="text" pInputText formControlName="contaDestino"/>
       </div>
       <div class="form-group">
         <label for="dataDeposito">Data:</label>
@@ -17,7 +17,7 @@
       </div>
       <div class="form-group">
         <label for="valor">Valor:</label>
-        <input type="text" pInputText />
+        <input type="text" pInputText formControlName="valor"/>
       </div>
       <button pButton pRipple label="Submit" class="p-button-success"></button>
     </form>
