--- a/poc-front-abertura-contas/src/app/components/menu-navegacao/menu-navegacao.component.html
+++ b/poc-front-abertura-contas/src/app/components/menu-navegacao/menu-navegacao.component.html
@@ -1,6 +1,6 @@
 <div class="menu-container">
   <div class="logo-container">
-    <img src="caminho/para/sua/logo.png" alt="Logo" width="100" height="200">
+    <img src="assets/img/logo.jpg" alt="Logo">
   </div>
   <div class="dropdown">
     <button class="dropbtn">Usuário</button>
