--- a/poc-front-abertura-contas/src/app/components/pesquisa-deposito/pesquisa-deposito.component.html
+++ b/poc-front-abertura-contas/src/app/components/pesquisa-deposito/pesquisa-deposito.component.html
@@ -23,8 +23,8 @@
       </thead>
       <tbody>
       <tr>
-        <td>{{ deposito.id }}</td>
-        <td>{{ deposito.data }}</td>
+        <td>{{ deposito.idDeposito }}</td>
+        <td>{{ deposito.dataDeposito }}</td>
         <td>{{ deposito.valor }}</td>
       </tr>
       </tbody>
