--- a/poc-front-abertura-contas/src/app/components/pesquisa-saque/pesquisa-saque.component.html
+++ b/poc-front-abertura-contas/src/app/components/pesquisa-saque/pesquisa-saque.component.html
@@ -23,8 +23,8 @@
       </thead>
       <tbody>
       <tr>
-        <td>{{ saque.id }}</td>
-        <td>{{ saque.data }}</td>
+        <td>{{ saque.idSaque }}</td>
+        <td>{{ saque.dataSaque }}</td>
         <td>{{ saque.valor }}</td>
       </tr>
       </tbody>
