--- a/poc-front-abertura-contas/src/app/components/tabela-deposito/tabela-deposito.component.css
+++ b/poc-front-abertura-contas/src/app/components/tabela-deposito/tabela-deposito.component.css
@@ -1,7 +1,7 @@
 .deposit-table-container {
   display: flex;
   justify-content: center; /* Centraliza horizontalmente */
-  height: 100vh;
+  height: auto;
 }
 
 .deposit-table-wrapper {
@@ -15,8 +15,18 @@
   border-radius: 10px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   padding: 20px;
-  width: 800px; /* Define a largura da tabela para 800px */
+  width: auto; /* Define a largura da tabela para 800px */
   max-width: 90%; /* Garante que a tabela não exceda 90% da largura da tela */
   text-align: center; /* Centraliza o conteúdo da tabela */
   margin-bottom: 20px; /* Adiciona margem inferior para separar de outros elementos */
+}
+
+.deposit-table th,
+.deposit-table td {
+  padding: 5px; /* Reduz ainda mais o espaçamento interno das células */
+  border: 1px solid #ddd;
+}
+
+.deposit-table thead th {
+  background-color: #ccc;
 }
