--- a/poc-front-abertura-contas/src/app/components/tabela-saque/tabela-saque.component.html
+++ b/poc-front-abertura-contas/src/app/components/tabela-saque/tabela-saque.component.html
@@ -12,8 +12,8 @@
       </thead>
       <tbody>
       <tr *ngFor="let saque of saques">
-        <td>{{ saque.id }}</td>
-        <td>{{ saque.data }}</td>
+        <td>{{ saque.idSaque }}</td>
+        <td>{{ saque.dataSaque }}</td>
         <td>{{ saque.valor }}</td>
       </tr>
       </tbody>
