--- a/poc-front-abertura-contas/src/app/components/tabela-transferencia/tabela-transferencia.component.css
+++ b/poc-front-abertura-contas/src/app/components/tabela-transferencia/tabela-transferencia.component.css
@@ -1,22 +1,33 @@
 .transferencia-table-container {
   display: flex;
-  justify-content: center; /* Centraliza horizontalmente */
-  height: 100vh;
+  justify-content: center;
+  height: auto;
 }
 
 .transferencia-table-wrapper {
-  width: 100%; /* Garante que a tabela ocupe toda a largura do container */
+  width: 100%;
   display: flex;
-  justify-content: center; /* Centraliza horizontalmente */
+  justify-content: center;
 }
 
 .transferencia-table {
   background-color: #f0f0f0;
   border-radius: 10px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  padding: 20px;
-  width: 800px; /* Define a largura da tabela para 800px */
-  max-width: 90%; /* Garante que a tabela não exceda 90% da largura da tela */
-  text-align: center; /* Centraliza o conteúdo da tabela */
-  margin-bottom: 20px; /* Adiciona margem inferior para separar de outros elementos */
+  padding: 10px;
+  width: auto;
+  max-width: 90%;
+  text-align: center;
+  margin-bottom: 20px;
 }
+
+.transferencia-table th,
+.transferencia-table td {
+  padding: 5px; /* Reduz ainda mais o espaçamento interno das células */
+  border: 1px solid #ddd;
+}
+
+.transferencia-table thead th {
+  background-color: #ccc;
+}
+
