--- a/poc-front-abertura-contas/src/app/components/tabela-transferencia/tabela-transferencia.component.html
+++ b/poc-front-abertura-contas/src/app/components/tabela-transferencia/tabela-transferencia.component.html
@@ -14,8 +14,8 @@
       </thead>
       <tbody>
       <tr *ngFor="let transferencia of transferencias">
-        <td>{{ transferencia.id }}</td>
-        <td>{{ transferencia.data }}</td>
+        <td>{{ transferencia.idTransferencia }}</td>
+        <td>{{ transferencia.dataTransferencia }}</td>
         <td>{{ transferencia.valor }}</td>
         <td>{{ transferencia.contaOrigem }}</td>
         <td>{{ transferencia.contaDestino }}</td>
