--- a/poc-front-abertura-contas/src/app/components/telefone/telefone.component.html
+++ b/poc-front-abertura-contas/src/app/components/telefone/telefone.component.html
@@ -4,12 +4,16 @@
     <h2 class="form-title">Cadastrar Telefone</h2>
     <form [formGroup]="telefoneForm" (ngSubmit)="submitForm()">
       <div class="form-group">
-        <label for="ddd">DDD:</label>
-        <input type="text" pInputText />
+        <label for="idUsuario">ID USUARIO</label>
+        <input type="text" pInputText formControlName="idUsuario" [(ngModel)]="telefoneForm.value.idUsuario"/>
       </div>
       <div class="form-group">
-        <label for="numero">Telefone:</label>
-        <input type="text" pInputText />
+        <label for="ddd">DDD:</label>
+        <input type="text" pInputText formControlName="ddd"/>
+      </div>
+      <div class="form-group">
+        <label for="telefone">Telefone:</label>
+        <input type="text" pInputText formControlName="telefone"/>
       </div>
       <button pButton pRipple label="Submit" class="p-button-success"></button>
     </form>
