--- a/poc-front-abertura-contas/src/app/components/transferencia/transferencia.component.html
+++ b/poc-front-abertura-contas/src/app/components/transferencia/transferencia.component.html
@@ -5,19 +5,19 @@
     <form [formGroup]="transferenciaForm" (ngSubmit)="submitForm()">
       <div class="form-group">
         <label for="contaOrigem">Conta Origem:</label>
-        <input type="text" pInputText />
+        <input type="text" pInputText formControlName="contaOrigem"/>
       </div>
       <div class="form-group">
         <label for="contaDestino">Conta Destino:</label>
-        <input type="text" pInputText />
+        <input type="text" pInputText formControlName="contaDestino"/>
       </div>
       <div class="form-group">
         <label for="valor">Valor:</label>
-        <input type="text" pInputText />
+        <input type="text" pInputText formControlName="valor"/>
       </div>
       <div class="form-group">
         <label for="dataTransferencia">Data:</label>
-        <input type="date" id="dataNascimento" formControlName="dataNascimento" />
+        <input type="date" id="dataTransferencia" formControlName="dataTransferencia" />
       </div>
       <button pButton pRipple label="Submit" class="p-button-success"></button>
     </form>
