--- a/poc-front-abertura-contas/src/app/components/endereco/endereco.component.html
+++ b/poc-front-abertura-contas/src/app/components/endereco/endereco.component.html
@@ -4,28 +4,32 @@
     <h2 class="form-title">Cadastrar Endereço</h2>
     <form [formGroup]="enderecoForm" (ngSubmit)="submitForm()">
       <div class="form-group">
+        <label for="idUsuario">idUsuario:</label>
+        <input type="text" pInputText formControlName="idUsuario" [(ngModel)]="enderecoForm.value.idUsuario"/>
+      </div>
+      <div class="form-group">
         <label for="rua">Rua:</label>
-        <input type="text" pInputText />
+        <input type="text" pInputText formControlName="rua"/>
       </div>
       <div class="form-group">
         <label for="numero">Nº:</label>
-        <input type="text" pInputText />
+        <input type="text" pInputText formControlName="numero"/>
       </div>
       <div class="form-group">
         <label for="bairro">Bairro:</label>
-        <input type="text" pInputText />
+        <input type="text" pInputText formControlName="bairro"/>
       </div>
       <div class="form-group">
         <label for="cep">CEP:</label>
-        <input type="text" pInputText />
+        <input type="text" pInputText formControlName="cep"/>
       </div>
       <div class="form-group">
         <label for="cidade">Cidade:</label>
-        <input type="text" pInputText />
+        <input type="text" pInputText formControlName="cidade"/>
       </div>
       <div class="form-group">
         <label for="uf">UF:</label>
-        <input type="text" pInputText />
+        <input type="text" pInputText formControlName="uf"/>
       </div>
       <button pButton pRipple label="Submit" class="p-button-success"></button>
     </form>
