--- a/poc-front-abertura-contas/src/app/components/menu-navegacao/menu-navegacao.component.css
+++ b/poc-front-abertura-contas/src/app/components/menu-navegacao/menu-navegacao.component.css
@@ -18,8 +18,9 @@
 }
 
 .logo-container img {
-  width: 100px; /* Largura da imagem da logo */
+  width: 50px; /* Largura da imagem da logo */
   object-fit: cover; /* Garante que a imagem cubra as dimensões sem distorcer */
+  height: 50px;
 }
 
 .dropdown {
@@ -29,7 +30,7 @@
 .dropbtn {
   background-color: #f2f2f2; /* Cor de fundo igual à cor do .menu-container */
   color: #333;
-  padding: 10px 15px;
+  padding: 1px 15px;
   font-size: 16px;
   border: none;
   cursor: pointer;
