--- a/poc-front-abertura-contas/src/app/components/saque/saque.component.html
+++ b/poc-front-abertura-contas/src/app/components/saque/saque.component.html
@@ -5,11 +5,11 @@
     <form [formGroup]="saqueForm" (ngSubmit)="submitForm()">
       <div class="form-group">
         <label for="conta">Conta:</label>
-        <input type="text" pInputText />
+        <input type="text" pInputText formControlName="conta"/>
       </div>
       <div class="form-group">
         <label for="valor">Valor:</label>
-        <input type="text" pInputText />
+        <input type="text" pInputText formControlName="valor"/>
       </div>
       <div class="form-group">
         <label for="dataSaque">Data:</label>
