--- a/poc-front-abertura-contas/src/app/components/tabela-saque/tabela-saque.component.css
+++ b/poc-front-abertura-contas/src/app/components/tabela-saque/tabela-saque.component.css
@@ -1,13 +1,14 @@
 .saque-table-container {
   display: flex;
-  justify-content: center; /* Centraliza horizontalmente */
-  height: 100vh;
+  justify-content: center;
+  height: 25vh;
+
 }
 
 .saque-table-wrapper {
-  width: 100%; /* Garante que a tabela ocupe toda a largura do container */
+  width: 100%;
   display: flex;
-  justify-content: center; /* Centraliza horizontalmente */
+  justify-content: center;
 }
 
 .saque-table {
@@ -15,8 +16,19 @@
   border-radius: 10px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   padding: 20px;
-  width: 800px; /* Define a largura da tabela para 800px */
-  max-width: 90%; /* Garante que a tabela não exceda 90% da largura da tela */
-  text-align: center; /* Centraliza o conteúdo da tabela */
-  margin-bottom: 20px; /* Adiciona margem inferior para separar de outros elementos */
+  width: 800px;
+  max-width: 90%;
+  text-align: center;
+  margin-bottom: 20px;
+  border-collapse: collapse;
+}
+
+.saque-table th,
+.saque-table td {
+  padding: 5px; /* Reduz ainda mais o espaçamento interno das células */
+  border: 1px solid #ddd;
+}
+
+.saque-table thead th {
+  background-color: #ccc;
 }
