--- a/poc-front-abertura-contas/src/app/components/usuario/usuario.component.html
+++ b/poc-front-abertura-contas/src/app/components/usuario/usuario.component.html
@@ -5,15 +5,15 @@
     <form [formGroup]="usuarioForm" (ngSubmit)="submitForm()">
       <div class="form-group">
         <label for="nome">Nome:</label>
-        <input type="text" pInputText />
+        <input type="text" pInputText formControlName="nome" />
       </div>
       <div class="form-group">
         <label for="sobrenome">Sobrenome:</label>
-        <input type="text" pInputText />
+        <input type="text" pInputText formControlName="sobrenome" />
       </div>
       <div class="form-group">
         <label for="email">Email:</label>
-        <input type="email" pInputText />
+        <input type="email" pInputText formControlName="email" />
       </div>
       <div class="form-group">
         <label for="dataNascimento">Data de Nascimento:</label>
@@ -21,7 +21,7 @@
       </div>
       <div class="form-group">
         <label for="cnpj">CNPJ:</label>
-        <input type="text" pInputText />
+        <input type="text" pInputText formControlName="cnpj"/>
       </div>
       <button pButton pRipple label="Submit" class="p-button-success"></button>
     </form>
